package org.ai.tictactoe.game;

public enum GameSymbol {
    X,
    O;
}
