package org.ai.tictactoe.game;

public enum GameType {
    PLAYER_VS_AI, AI_VS_AI, PLAYER_VS_PLAYER
}
