package org.ai.tictactoe.judge;

public class TicTacToeJudger implements Judger{
}
