package org.ai.tictactoe.logic;

public interface Player {
    void makeMove(GameBoard board);
}
