package org.ai.tictactoe.player;

public enum GameDifficulty {
    EASY, MEDIUM, HARD, INSANE
}
